--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
         <input type ="text" id="rollno" placeholder="rollno">
         <input type="email" id="email" placeholder="email">
         <input type="number" id="semester" placeholder="semester">
-        <input type="number" id="credits" placeholder="credits">
+        <input type="text" id="password" placeholder="password">
         <input type="text" id="member" placeholder="member">
         <input type="file" id="image" name="image" placeholder="image">
         <input type="submit">
@@ -42,6 +42,8 @@
         <input type="submit">
     </form>
     <div id = "merchs"></div>
-    <script src="./frontend.js"></script>
+    <h1> Logout option</h1>
+    <button id="logout">Logout</button>
+    <script src="./index.js"></script>
 </body>
 </html>
