--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -5,16 +5,23 @@
     left: 0;
     width: 100%;
     color: white;
-    font-size: 20px;
+    /* font-size: 20px; */
     display: flex;
     justify-content: space-around;
     background-color: white;
-    padding: 16px 0;
+    padding: 8px 0;
     border-top: 1px solid #ddd;
   }
 
   .profile-pic {
+    margin-top: 4px;
     width: 32px;
     height:32px;
     border-radius: 50%;
+  }
+
+  .icons{
+    margin-top: 4px;
+    width: 32px;
+    height: 32px;
   }
