--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -6,10 +6,10 @@
     padding: 0;
   }
   
-  h1, h2, p {
+  /* h1, h2, p {
     margin: 0;
     padding: 0;
-  }
+  } */
   
   /* Hero Section */
   .hero {
@@ -42,52 +42,48 @@
   }
   
   /* Events Section */
-  .events {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin: 40px 0;
-    text-align: center;
-  }
-  
-  .event-card {
-    flex: 1;
-    max-width: 300px;
-    background: #f5f5f5;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .event-image {
-    height: 200px;
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .ongoing-events {
-    background: url("../assets/profile.png") center/cover no-repeat;
-  }
-  
-  .upcoming-events {
-    background: url("../assets/profile.png") center/cover no-repeat;
-  }
-  
-  .past-events {
-    background: url("../assets/profile.png") center/cover no-repeat;
-  }
-  
-  .event-card h2 {
-    padding: 15px 0px;
-    font-size: 12px;
-    background: #fff;
-  }
+ .events {
+  padding: 0px 8px 8px 8px;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.events h1 {
+  font-size: 28px;
+  margin: 8px 0px 8px 0px;
+}
+
+.events-cards {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+}
+
+.events-card {
+  flex: 1;
+  max-width: 300px;
+  height: 200px;
+  background: #ddd;
+}
+
+.events-1 {
+  background: url("../assets/profile.png") center/cover no-repeat;
+}
+
+.events-2 {
+  background: url("../assets/profile.png") center/cover no-repeat;
+}
+
+.events-3 {
+  background: url("../assets/profile.png") center/cover no-repeat;
+}
+
   
   /* About Us Section */
   .about-us {
     display: flex;
     gap: 20px;
-    padding: 40px;
+    padding: 0px 8px 0px 8px;
     align-items: center;
     background: #fafafa;
   }
@@ -97,8 +93,9 @@
   }
   
   .about-content h1 {
-    font-size: 16px;
+    font-size: 28px;
     margin-bottom: 4px;
+    margin: 0px;
   }
   
   .about-content p {
@@ -114,18 +111,19 @@
   
   /* Webinars Section */
   .webinars {
-    padding: 40px;
+    padding: 0px 8px 8px 8px;
     text-align: center;
+    margin-bottom: 8px;
   }
   
   .webinars h1 {
     font-size: 28px;
-    margin-bottom: 20px;
+    margin: 8px 0px 8px 0px;
   }
   
   .webinar-cards {
     display: flex;
-    gap: 20px;
+    gap: 8px;
     justify-content: center;
   }
   
@@ -134,7 +132,6 @@
     max-width: 300px;
     height: 200px;
     background: #ddd;
-    border-radius: 8px;
   }
   
   .webinar-1 {
