--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -37,3 +37,18 @@ body {
   font-size: 24px;
   color: BLACK;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 0 8px;
+  }
+  
+  .name {
+    font-size: 20px;
+  }
+  
+  .icons {
+    width: 20px;
+    height: 20px;
+  }
+}
